--- a/index.html
+++ b/index.html
@@ -625,51 +625,51 @@
         <div class="row">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="pri_table_list">
-              <h3>basic <br /> <span>$80 / month</span></h3>
+              <h3>basic <br /> <span> 299 Rs</span></h3>
               <ol>
                 <li class="check"><i class="bi bi-check"></i><span>Online system</span></li>
-                <li class="check"><i class="bi bi-x"></i><span>Full access</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Free apps</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Multiple slider</span></li>
-                <li class="cross"><i class="bi bi-x"></i><span>Free domin</span></li>
-                <li class="cross"><i class="bi bi-x"></i><span>Support unlimited</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Fully Responsive</span></li>
                 <li class="check"><i class="bi bi-check"></i><span>Payment online</span></li>
-                <li class="check"><i class="bi bi-x"></i><span>Cash back</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Free Google Embed Map</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Single Page Covered</span></li>
+                <li class="cross"><i class="bi bi-x"></i><span>Free domin</span></li>
+                <li class="cross"><i class="bi bi-x"></i><span>Support (For 24hr)</span></li>
+                <li class="cross"><i class="bi bi-x"></i><span>No Cash back after Work done</span></li>
               </ol>
-              <button>sign up now</button>
+              <button onclick="window.location.href='#contact';">sign up now</button>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="pri_table_list active">
               <span class="saleon">top sale</span>
-              <h3>standard <br /> <span>$110 / month</span></h3>
+              <h3>standard <br /> <span> 999 Rs </span></h3>
               <ol>
                 <li class="check"><i class="bi bi-check"></i><span>Online system</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Full access</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Free apps</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Multiple slider</span></li>
-                <li class="cross"><i class="bi bi-x"></i><span>Free domin</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Support unlimited</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Full Responsive</span></li>
                 <li class="check"><i class="bi bi-check"></i><span>Payment online</span></li>
-                <li class="cross"><i class="bi bi-x"></i><span>Cash back</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Free Google Embed Map</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Multiple pages (upto 3)</span></li>
+                <li class="check"><i class="bi bi-x"></i><span>Domin (For 99 Rs)</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Support unlimited</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Cash back</span></li>
               </ol>
-              <button>sign up now</button>
+              <button onclick="window.location.href='#contact';">sign up now</button>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="pri_table_list">
-              <h3>premium <br /> <span>$150 / month</span></h3>
+              <h3>premium <br /> <span>2499 Rs - Lifetime Service</span></h3>
               <ol>
                 <li class="check"><i class="bi bi-check"></i><span>Online system</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Full access</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Free apps</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Multiple slider</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Free domin</span></li>
-                <li class="check"><i class="bi bi-check"></i><span>Support unlimited</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Full Responsive</span></li>
                 <li class="check"><i class="bi bi-check"></i><span>Payment online</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Free Google Embed Map</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Multiple pages (upto 7)</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Free domin</span></li>
+                <li class="check"><i class="bi bi-check"></i><span>Support unlimited with Ui/Ux</span></li>
                 <li class="check"><i class="bi bi-check"></i><span>Cash back</span></li>
               </ol>
-              <button>sign up now</button>
+              <button onclick="window.location.href='#contact';">sign up now</button>
             </div>
           </div>
         </div>
@@ -756,7 +756,7 @@
     </div><!-- End Testimonials Section -->
 
     <!-- ======= Blog Section ======= -->
-    <div id="blog" class="blog-area">
+    <!-- <div id="blog" class="blog-area">
       <div class="blog-inner area-padding">
         <div class="blog-overly"></div>
         <div class="container ">
@@ -768,7 +768,7 @@
             </div>
           </div>
           <div class="row">
-            <!-- Start Left Blog -->
+            Start Left Blog xyz
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="single-blog">
                 <div class="single-blog-img">
@@ -797,10 +797,10 @@
                   <a href="blog.html" class="ready-btn">Read more</a>
                 </span>
               </div>
-              <!-- Start single blog -->
+              Start single blog xyz
             </div>
-            <!-- End Left Blog-->
-            <!-- Start Left Blog -->
+            End Left Blog xyz
+            Start Left Blog
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="single-blog">
                 <div class="single-blog-img">
@@ -829,10 +829,10 @@
                   <a href="blog.html" class="ready-btn">Read more</a>
                 </span>
               </div>
-              <!-- Start single blog -->
+              Start single blog xyz
             </div>
-            <!-- End Left Blog-->
-            <!-- Start Right Blog-->
+            End Left Blog  xyz
+            Start Right Blog
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="single-blog">
                 <div class="single-blog-img">
@@ -862,11 +862,11 @@
                 </span>
               </div>
             </div>
-            <!-- End Right Blog-->
+            End Right Blog xyz
           </div>
         </div>
       </div>
-    </div><!-- End Blog Section -->
+    </div>End Blog Section xyz -->
 
     <!-- ======= Suscribe Section ======= -->
     <div class="suscribe-area">
@@ -875,7 +875,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs=12">
             <div class="suscribe-text text-center">
               <h3>Welcome to our eBusiness company</h3>
-              <a class="sus-btn" href="#">Get A quote</a>
+              <a class="sus-btn" href="#contact">Get A quote</a>
             </div>
           </div>
         </div>
@@ -901,7 +901,7 @@
                 <div class="single-icon">
                   <i class="bi bi-phone"></i>
                   <p>
-                    Call: +1 5589 55488 55<br>
+                    Call: +91 9023330478<br>
                     <span>Monday-Friday (9am-5pm)</span>
                   </p>
                 </div>
@@ -913,7 +913,7 @@
                 <div class="single-icon">
                   <i class="bi bi-envelope"></i>
                   <p>
-                    Email: info@example.com<br>
+                    Email: shubhakurpkm@gmail.com<br>
                     <span>Web: www.example.com</span>
                   </p>
                 </div>
@@ -925,8 +925,9 @@
                 <div class="single-icon">
                   <i class="bi bi-geo-alt"></i>
                   <p>
-                    Location: A108 Adam Street<br>
-                    <span>NY 535022, USA</span>
+                    Location: E302 Shukan Gold , Gota<br>
+                    <span>Ahmedabad , Gujrat</span><br>
+                    <span>382481 India</span>
                   </p>
                 </div>
               </div>
@@ -937,7 +938,7 @@
             <!-- Start Google Map -->
             <div class="col-md-6">
               <!-- Start Map -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3670.0163398779473!2d72.5445517510991!3d23.096497684841744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e8318593a8df3%3A0xc9efe0fd00dfae72!2sShukan%20Gold!5e0!3m2!1sen!2sin!4v1633120929319!5m2!1sen!2sin" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
               <!-- End Map -->
             </div>
             <!-- End Google Map -->
@@ -1016,8 +1017,8 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                 </p>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> +123 456 789</p>
-                  <p><span>Email:</span> contact@example.com</p>
+                  <p><span>Tel:</span> +91 9023330478</p>
+                  <p><span>Email:</span> shubhankurpkm@gmail.com</p>
                   <p><span>Working Hours:</span> 9am-5pm</p>
                 </div>
               </div>
@@ -1050,15 +1051,6 @@
               <p>
                 &copy; Copyright <strong>eBusiness</strong>. All Rights Reserved
               </p>
-            </div>
-            <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
-            -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
           </div>
         </div>
