--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
             <!-- Start  contact -->
             <div class="col-md-6">
               <div class="form contact-form">
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <form action="forms/contact.php" method="POST" role="form" class="php-email-form">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                   </div>
